fix: [APAAS-986] fix ppt button overlap

--- a/packages/agora-scenario-ui-kit/src/styles/scenario.css
+++ b/packages/agora-scenario-ui-kit/src/styles/scenario.css
@@ -469,3 +469,12 @@
   left: -6px;
   bottom: -2px;
 }
+
+#window-manager-collector .telebox-collector {
+  position: static;
+  @apply mr-1;
+}
+
+#window-manager-collector .telebox-collector-icon {
+  margin: 0 auto;
+}
